# kani

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
boot/: grub.cfg
kernel/: Cargo.toml  allocator.rs  boot.S  logger.rs  main.rs  page_frame_allocator.rs  println.rs  task.rs
kernel/arch/: mod.rs
kernel/arch/x64/: allocator.rs  boot.S  gdt.rs  init.rs  interrupts.rs  ioapic.rs  lapic.rs  mod.rs  multiboot.rs  multiboot2.rs  paging.rs  process.rs  task.S  task.rs  uart.rs  x64.json  x64.ld
kernel/process/: mod.rs
kernel/task/: executor.rs  mod.rs  uart.rs
lib/: Cargo.toml  lib.rs  linked_list.rs
