[package]
name = "kani"
version = "0.0.1"
authors = ["Totsugekitai <37617413+Totsugekitai@users.noreply.github.com>"]
edition = "2021"

[[bin]]
name = "kani"
path = "main.rs"

[dependencies]
log = "0.4"
x86_64 = "0.14.6"
spin = "0.9.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
arrayvec = { version = "0.7.2", default-features = false }
linked_list_allocator = "0.9.0"
crossbeam = { version = "0.8.1", default-features = false, features = [
    "alloc",
] }

[features]
qemu = []
log_error = []
log_warn = []
log_info = []
log_debug = []
log_trace = []
